--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em
         </p>
         <h2>Documentation</h2>
         <ul>
+          <li>Program: <a title="Supercell program executable for Linux systems"
+              href="exe/supercell.tar.gz">linux</a></li>
           <li>Manual: <a title="Supercell manual in PDF format" href="doc/supercell_man.pdf">pdf</a>,
             <a target="_top" title="Supercell manual in HTML format" href="doc/supercell_man.html">html</a></li>
           <li>Tutorial: <a title="Supercell tutorial in PDF format" href="doc/supercell_tutorial.pdf">pdf</a><br>
