--- a/index.html
+++ b/index.html
@@ -29,49 +29,13 @@ h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em
         <p><br>
         </p>
         <h2>Download</h2>
-        <table style="width: 100%;" border="1">
-          <thead style=" background-color: #DDDDDD;">
-            <tr>
-              <th>File<br>
-              </th>
-              <th>Date<br>
-              </th>
-              <th>SHA-256<br>
-              </th>
-              <th>Commit message<br>
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><br>
-              </td>
-              <td><br>
-              </td>
-              <td><br>
-              </td>
-              <td><br>
-              </td>
-            </tr>
-            <tr>
-              <td><br>
-              </td>
-              <td><br>
-              </td>
-              <td><br>
-              </td>
-              <td><br>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <p><br>
-        </p>
-        <h2>Documentation</h2>
         <ul>
           <li>Program: <a title="Supercell program executable for Linux systems"
               href="exe/supercell-linux.tar.gz">linux-x86_64</a>, <a title="Supercell program executable for OSX systems"
               href="exe/supercell-osx.tar.gz">osx</a> </li>
+        </ul>
+        <h2>Documentation</h2>
+        <ul>
           <li>Manual: <a title="Supercell manual in PDF format" href="doc/supercell_man.pdf">pdf</a>,
             <a target="_top" title="Supercell manual in HTML format" href="doc/supercell_man.html">html</a></li>
           <li>Tutorial: <a title="Supercell tutorial in PDF format" href="doc/supercell_tutorial.pdf">pdf</a><br>
@@ -79,6 +43,7 @@ h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em
         </ul>
         <h2>Useful links</h2>
         <p><br>
+          <a title="Supercell paper" href="http://jcheminf.springeropen.com/articles/10.1186/s13321-016-0129-3">Okhotnikov K, Charpentier T, Cadars S, Supercell program: a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals. Journal of Cheminformatics, 2016 vol: 8 (1) pp: 17</a>
         </p>
         <h2>About</h2>
         <p><br>
