Tablet better view.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <h1 class="text-center">Supercell program</h1>
         <p class="text-center">a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals.</p>
         <div class="row">
-          <div class="col-lg-3 col-lg-offset-3 col-md-offset-3 col-md-2 col-sm-offset-3 col-sm-3 col-xs-offset-3 col-xs-3">
+          <div class="col-lg-3 col-lg-offset-3 col-md-offset-2 сol-md-3 col-sm-offset-1 col-sm-4 col-xs-offset-1 col-xs-5">
             <p><a class="btn btn-success btn-lg" href="#read-more" role="button"> <span class="glyphicon glyphicon-book" aria-hidden="true"></span>  LEARN MORE</a> </p>
           </div>
-          <div class="col-lg-3 col-lg-offset-1 col-md-6 col-sm-6">
+          <div class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1 col-sm-4 col-sm-offset-2 col-xs-5 col-xs-offset-1">
             <p><a class="btn btn-primary btn-lg" href="#download" role="button"> <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>  DOWNLOAD</a> </p>
           </div>
         </div>        
