--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div id="publications" class="container">
   <h1>Publications</h1>
   <hr>
-  <h3>Please site the following paper, if you use supercell program:</h3>
+  <h3>Please cite the following paper, if you use supercell program:</h3>
   <ul class="list-papers">
   	<li>Okhotnikov, K., Charpentier, T., & Cadars, S. (2016). Supercell program: a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals. Journal of Cheminformatics, 8(1), 17. <a href="http://doi.org/10.1186/s13321-016-0129-3">View Article</a></li>
   </ul>
