--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
   <div class="row">
     <div class="text-center col-sm-6">
       <h3><i class="fa fa-file-zip-o" aria-hidden="true"></i>  Compiled binaries</h3>
-      <p>The easiest way to obtain the program is download compiled binaries for Linux and Mac platforms. Just download the archive, unpack it and follow the instruction inside. You don't need to install the binaries, therefore you can use it without root permission. Please note, that output packing <a href="doc/supercell_man.html#section_3">(-a option)</a> is not available in these binaries.</p>
+      <p>The easiest way to obtain the program is to download compiled binaries for Linux and Mac platforms. Just download the archive, unpack it and follow the instruction inside. You don't need to install the binaries, therefore you can use it without root permission. Please note, that output packing <a href="doc/supercell_man.html#section_3">(-a option)</a> is not available in these binaries.</p>
     </div>  
     <div class="text-center col-sm-6">
       <h3><i class="fa fa-file-code-o" aria-hidden="true"></i>  Source code</h3>
-		<p>Building the program from source code is suggested for advanced users, who need output packing or want to change the program code. I can reccomend to use Ubuntu 12.04 or later for compiling the code. You can also install compiled program to your system, if you have an administrator rights. The program can be compiled for Windows platfrom also, but I've never try this. Tutorial and manual sources are also available.</p>
+		<p>Building the program from source code is suggested for advanced users, who need output packing or want to change the program code. I can recommend to use Ubuntu 12.04 or later for compiling the code. You can also install compiled program to your system, if you have administrator rights. The program can be compiled for Windows platfrom also, but I've never tried this. Tutorial and manual sources are also available.</p>
     </div>  
   </div>
   <div class="row">
