--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
   <h3>Papers which use supercell programs:</h3>
   <ul class="list-papers">
     <li>Salager, E., Sarou-Kanian, V., Sathiya, M., Tang, M., Leriche, J.-B., Melin, P., … Tarascon, J.-M. (2014). Solid-State NMR of the Family of Positive Electrode Materials <span style="white-space: nowrap;">Li<sub>2</sub>Ru<sub>1-y</sub>Sn<sub>y</sub>O<sub>3</sub></span> for Lithium-Ion Batteries. Chemistry of Materials, 26(24), 7009–7019. <a href="http://doi.org/10.1021/cm503280s">View Article</a></li>
-  	<li>Okhotnikov, K. (2016). Comment on “Symmetry and random sampling of symmetry independent configurations for the simulation of disordered solids”, <a href="http://arxiv.org/abs/1606.08062">View Article</a></li>  	
+    <li>Okhotnikov, K. (2016). Comment on “Symmetry and random sampling of symmetry independent configurations for the simulation of disordered solids”, <a href="http://arxiv.org/abs/1606.08062">View Article</a></li>
+    <li>Cadars, S., Ho Ahn, N., Okhotnikov, K., Shin, J., Vicente, A., Bong Hong, S., & Fernandez, C. (2017). Modeling Short-Range Substitution Order and Disorder in Crystals: Application to the Ga/Si Distribution in a Natrolite Zeolite. Solid State Nuclear Magnetic Resonance. <a href="http://doi.org/10.1016/j.ssnmr.2017.04.001">View Article</a></li>  
   </ul>
 </div>
 <br>
