--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
   <ul class="list-papers">
   	<li>Okhotnikov, K., Charpentier, T., & Cadars, S. (2016). Supercell program: a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals. Journal of Cheminformatics, 8(1), 17. <a href="http://doi.org/10.1186/s13321-016-0129-3">View Article</a></li>
   </ul>
-  <h3>Papers which use supercell programs:</h3>
+  <h3>Papers which use/cite supercell programs:</h3>
   <ul class="list-papers">
     <li>Salager, E., Sarou-Kanian, V., Sathiya, M., Tang, M., Leriche, J.-B., Melin, P., … Tarascon, J.-M. (2014). Solid-State NMR of the Family of Positive Electrode Materials <span style="white-space: nowrap;">Li<sub>2</sub>Ru<sub>1-y</sub>Sn<sub>y</sub>O<sub>3</sub></span> for Lithium-Ion Batteries. Chemistry of Materials, 26(24), 7009–7019. <a href="http://doi.org/10.1021/cm503280s">View Article</a></li>
     <li>Okhotnikov, K. (2016). Comment on “Symmetry and random sampling of symmetry independent configurations for the simulation of disordered solids”, <a href="http://arxiv.org/abs/1606.08062">View Article</a></li>
+    <li>Fischer, M., & Angel, R. J. (2017). Accurate structures and energetics of neutral-framework zeotypes from dispersion-corrected DFT calculations. The Journal of Chemical Physics, 146(17), 174111. <a href="http://doi.org/10.1063/1.4981528">View Article</a></li>
     <li>Cadars, S., Ho Ahn, N., Okhotnikov, K., Shin, J., Vicente, A., Bong Hong, S., & Fernandez, C. (2017). Modeling Short-Range Substitution Order and Disorder in Crystals: Application to the Ga/Si Distribution in a Natrolite Zeolite. Solid State Nuclear Magnetic Resonance. <a href="http://doi.org/10.1016/j.ssnmr.2017.04.001">View Article</a></li>  
   </ul>
 </div>
