--- a/index.html
+++ b/index.html
@@ -107,9 +107,14 @@
   <h1>Publications</h1>
   <hr>
   <h3>Please cite the following paper, if you use supercell program:</h3>
-  <ul class="list-papers">
-  	<li>Okhotnikov, K., Charpentier, T., & Cadars, S. (2016). Supercell program: a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals. Journal of Cheminformatics, 8(1), 17. <a href="http://doi.org/10.1186/s13321-016-0129-3"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-  </ul>
+  <div class="row">  
+    <div class="text-center col-lg-1 col-sm-2 col-md-2 col-xs-3">
+      <div data-badge-popover="right" data-doi='10.1186/s13321-016-0129-3' class="altmetric-embed"></div>
+    </div>
+    <div class="text-left col-lg-11 col-sm-10 col-md-10 col-xs-9">    
+       <p>Okhotnikov, K., Charpentier, T., & Cadars, S. (2016). Supercell program: a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals. Journal of Cheminformatics, 8(1), 17. <a href="http://doi.org/10.1186/s13321-016-0129-3"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></p>
+    </div>
+  </div>  
   <h3>Papers which use/cite supercell program:</h3>
   <ul class="list-papers">
     <li>Salager, E., Sarou-Kanian, V., Sathiya, M., Tang, M., Leriche, J.-B., Melin, P., … Tarascon, J.-M. (2014). Solid-State NMR of the Family of Positive Electrode Materials <span style="white-space: nowrap;">Li<sub>2</sub>Ru<sub>1-y</sub>Sn<sub>y</sub>O<sub>3</sub></span> for Lithium-Ion Batteries. Chemistry of Materials, 26(24), 7009–7019. <a href="http://doi.org/10.1021/cm503280s"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
@@ -211,5 +216,6 @@
 <script src="js/jquery-1.11.3.min.js"></script> 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
+<script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
 </body>
 </html>
