--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
     <li>Okhotnikov, K. (2016). Comment on “Symmetry and random sampling of symmetry independent configurations for the simulation of disordered solids”, <a href="http://arxiv.org/abs/1606.08062"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
     <li>Fischer, M., & Angel, R. J. (2017). Accurate structures and energetics of neutral-framework zeotypes from dispersion-corrected DFT calculations. The Journal of Chemical Physics, 146(17), 174111. <a href="http://doi.org/10.1063/1.4981528"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
     <li>Cadars, S., Ho Ahn, N., Okhotnikov, K., Shin, J., Vicente, A., Bong Hong, S., & Fernandez, C. (2017). Modeling Short-Range Substitution Order and Disorder in Crystals: Application to the Ga/Si Distribution in a Natrolite Zeolite. Solid State Nuclear Magnetic Resonance. <a href="http://doi.org/10.1016/j.ssnmr.2017.04.001"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a>, <a href="https://github.com/orex/supercell/tree/master/data/examples/Rb-PST-1"><i class="fa fa-file-code-o" aria-hidden="true"></i> View Example</a></li>  
-  </ul>
+    <li>Hong, S. U., Singh, S. P., Pyo, M., Park, W. B., & Sohn, K.-S. (2017). Density functional theory calculations for the band gap and formation energy of Pr<sub>4−x</sub>Ca<sub>x</sub>Si<sub>12</sub>O<sub>3+x</sub>N<sub>18−x</sub>; a highly disordered compound with low symmetry and a large cell size. Phys. Chem. Chem. Phys. <a href="http://doi.org/10.1039/C7CP03247A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a>
+   </ul>
 </div>
 <br>
 <div id="download" class="container">
