--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
 <link rel="stylesheet" href="css/supercell.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- Google Analytics -->
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+ga('create', 'UA-104749334-1', 'auto');
+ga('send', 'pageview');
 
-  ga('create', 'UA-104749334-1', 'auto');
-  ga('send', 'pageview');
+ga('require', 'eventTracker');
+ga('require', 'outboundLinkTracker');
+ga('require', 'urlChangeTracker');
+ga('require', 'pageVisibilityTracker');
 
 </script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+<script async src="js/autotrack.js"></script>
+<!-- End Google Analytics -->
 	
 </head>
 <body>
