--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@ ga('require', 'pageVisibilityTracker');
   </div>
   <div class="row">
     <div class="text-center col-sm-3">
-       <a class="btn btn-outline btn-lg" href="doc/supercell_tutorial.pdf" role="button"> <img src="images/PDF-32x32.png"> PDF</a></div>
+       <a class="btn btn-outline btn-lg" href="doc/supercell_tutorial.pdf" role="button" ga-on="click" ga-event-category="Data" ga-event-action="tutorial-pdf"> <img src="images/PDF-32x32.png"> PDF</a></div>
     <div class="text-center col-sm-3">
       <a class="btn btn-outline btn-lg" href="https://jcheminf.springeropen.com/articles/10.1186/s13321-016-0129-3" role="button"> <img src="images/www-24x24.png"> Read article</a></div>
     <div class="text-center col-sm-3">
-      <a class="btn btn-outline btn-lg" href="doc/supercell_man.html" role="button"> <img src="images/text_html_32x32.png"> HTML</a>
-      <a class="btn btn-outline btn-lg" href="doc/supercell_man.pdf" role="button"> <img src="images/PDF-32x32.png"> PDF</a>
+      <a class="btn btn-outline btn-lg" href="doc/supercell_man.html" role="button" ga-on="click" ga-event-category="Data" ga-event-action="man-html"> <img src="images/text_html_32x32.png"> HTML</a>
+      <a class="btn btn-outline btn-lg" href="doc/supercell_man.pdf" role="button" ga-on="click" ga-event-category="Data" ga-event-action="man-pdf"> <img src="images/PDF-32x32.png"> PDF</a>
       </div>
     <div class="text-center col-sm-3">
        <a class="btn btn-outline btn-lg" href="https://github.com/orex/supercell/tree/master/data/examples" role="button"><img src="images/www-24x24.png"> Examples</a></div>
@@ -159,8 +159,8 @@ ga('require', 'pageVisibilityTracker');
   </div>
   <div class="row">
     <div class="text-center col-sm-6">
-       <a class="btn btn-outline btn-lg" href="exe/supercell-linux.tar.gz" role="button"> <img src="images/Linux64x64.png"> <br>Linux 64bit</a>
-       <a class="btn btn-outline btn-lg" href="exe/supercell-osx.tar.gz" role="button"> <img src="images/mac64x64.png"> <br>OSX</a>
+       <a class="btn btn-outline btn-lg" href="exe/supercell-linux.tar.gz" role="button" ga-on="click" ga-event-category="Download" ga-event-action="download-linux"> <img src="images/Linux64x64.png"> <br>Linux 64bit</a>
+       <a class="btn btn-outline btn-lg" href="exe/supercell-osx.tar.gz" role="button" ga-on="click" ga-event-category="Download" ga-event-action="download-osx"> <img src="images/mac64x64.png"> <br>OSX</a>
     </div>
     <div class="text-center col-sm-6">
       <a class="btn btn-outline btn-lg" href="https://github.com/orex/supercell" role="button"> <img src="images/github64x64.png"><br>GitHub</a></div>
