--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ ga('require', 'pageVisibilityTracker');
   <div class="row">
     <div class="text-center col-sm-6">
       <h3><i class="fa fa-file-zip-o" aria-hidden="true"></i>  Compiled binaries</h3>
-      <p>The easiest way to obtain the program is to download compiled binaries for Linux and Mac platforms. Just download the archive, unpack it and follow the instruction inside. You don't need to install the binaries, therefore you can use it without root permission. Please note, that output packing <a href="doc/supercell_man.html#section_3">(-a option)</a> is not available in these binaries.</p>
+      <p>The easiest way to obtain the program is to download compiled binaries for Linux and Mac platforms. Just download the archive, unpack it and follow the instruction inside. You don't need to install the binaries, therefore you can use it without root permission.</p>
     </div>  
     <div class="text-center col-sm-6">
       <h3><i class="fa fa-file-code-o" aria-hidden="true"></i>  Source code</h3>
